public/css/app.css
/**
 * Custom app styles
 */

canvas {
    border: 1px solid black;
    background: #ffffff;
}

.checkbox {
    padding-left: 4px;
    padding-right: 4px;
}

input.checkbox-input {
    margin-right: 4px;
}

.hidden {
    display: none;
}

/* some selects are empty (e.g. before activating conditional options) */
.select select[multiple] {
    min-width: 10rem;
}

/** Tooltips */


button.is-small.tooltip-button {
    border: 0;
    font-size: 0.65rem;
    margin-left: 0.25rem;
}

h1, h2, h3, h4, h5, h6 {
    &.is-1,
    &.is-2,
    &.is-3 {
        width: 100%;
        & > button.is-small.tooltip-button {
            margin-top: 0.5rem;
        }
    }

    &.is-4 {
        width: 100%;
        & > button.is-small.tooltip-button {
            margin-top: 0.2rem;
        }
    }

    & > button.is-small.tooltip-button {
        margin-top: 0.3rem;
    }
}


button.clone-field {
    float: right;
    margin-top: 0.5rem;
}

/** Required so fieldsets don't destroy Bulma's column system */
fieldset {
    display: contents;
}

.fieldset-label {
    font-size: 1.25rem;
    font-weight: 500;
}

.is-full .fieldset-label {
    margin-bottom: 1rem;
}

fieldset h3,
fieldset .subtitle {
    font-size: 1.13rem;
    font-weight: 400;
    line-height: 1.25;
}


@media screen and (max-width: 768px), print {
    .field.is-spacer label,
    .field.is-spacer-doublelabel label {
        display: none;
    }
}


@media screen and (min-width: 769px), print {
    .is-full .fieldset-label {
        min-height: 1rem;
    }

    .columns.is-multiline {
        margin-bottom: 1rem;
    }

    .columns.is-multiline .is-multiline {
        margin-bottom: 0;
    }


    /** + + + + +  spacer  + + + + + */

    .field.is-spacer {
        height: 4.25em;
    }

    .field.is-spacer-doublelabel {
        height: 10em;
    }

    /**
     * .is-left-label marks fieldsets with "tablestyle" attribute
     */

    /** + + + + +  spacer in table design  + + + + + */

    .is-left-label .field.is-spacer {
        height: 2.25em; /* input-height: 2.25 */
    }

    .is-left-label .field.is-spacer-doublelabel {
        height: 6em; /* 2 x input-height: 2.25 + 2 x padding: 0.75*/
    }

    .is-left-label .field.is-spacer label,
    .is-left-label .field.is-spacer-doublelabel label {
        display: inline-block;
    }

    /* + + +  width of cols in table design + + + */

    .is-left-label .column.is-half {
        width: 33.3333%;
    }

    .is-left-label fieldset:first-of-type .column.is-half {
        width: 66.6666%;
    }

    .is-left-label .column.is-one-third {
        width: 25%;
    }

    .is-left-label fieldset:first-of-type .column.is-one-third {
        width: 50%;
    }

    .is-left-label .column.is-one-quarter {
        width: 20%;
    }

    .is-left-label fieldset:first-of-type .column.is-one-quarter {
        width: 40%;
    }

    /* + + +  background of cols in table design + + + */

    .is-left-label fieldset:nth-of-type(even) .column .is-multiline {
        background-color: #F3F3F3;
    }

    .is-left-label fieldset:first-of-type .fieldset-content .columns {
        position: relative;
    }

    .is-left-label fieldset:first-of-type .fieldset-content .columns::before {
        content: '';
        position: absolute;
        width: 50%;
        height: 100%;
        background-color: #F3F3F3;
    }

    /* + + +  position of col header (1. col)  + + + */

    .is-left-label fieldset:first-of-type .fieldset-label {
        width: 50%;
        margin-right: 0;
        margin-left: 50%;
        padding-left: 3%;
    }

    /* + + +  position of labels + width of input (1. col)  + + + */

    .is-left-label .column .field {
        position: relative;
    }

    /* labels will be invisible in tablestyle "columns" */
    .is-left-label div.label-with-tooltip {
        position: absolute;
        left: -1000rem;
        top: -1000rem;
    }

    /* but visibly move first label to "left header column" */
    .is-left-label fieldset:first-of-type div.label-with-tooltip {
        position: relative;
        left: 0;
        top: 0;
        width: 50%;
    }

    .is-left-label fieldset:first-of-type .field {
        display: flex;
    }

    .is-left-label fieldset:first-of-type .field .control {
        flex-grow: 1;
        padding-left: 0.75rem;
    }

}

.is-scrollable {
    width: 100%;
    overflow-y: auto;
    margin: 0 0 1em;
}

.is-scrollable::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 14px;
    height: 14px;
}

.is-scrollable::-webkit-scrollbar-thumb {
    border-radius: 8px;
    border: 3px solid #fff;
    background-color: rgba(0, 0, 0, .3);
}

div .field.with-tooltip .control {
    display: inline-flex;
    width: 100%;
    align-items: normal;
    align-content: baseline;

    & button {
        margin-left: 0.5rem;
    }
}

/**
 * Modal
 */

div.modal-content {
    width: unset;
    max-width: 75%;
}

div.modal-content div.box * {
    font-weight: initial;
}

/**
 * Labels
 */
label.label-smaller,
div.label-smaller {
    font-weight: normal;
}

.file-label {
    display: inline-block;
}

.label {
    display: inline-block;
}

.signature-pad .label {
    display: block;
}

.label:not(:last-child, .fieldset-label) {
    margin-bottom: unset;
}

.label-with-tooltip {
    margin-bottom: 0.25rem;
}

/**
 ** Upload dropzone
 */
.dropzone {
    &.highlight {
        padding: 0.252rem;
        background-color: var(--bulma-info);
        border-radius: 0.25rem;
    }
}

/**
 * Readonly field looking more a like disabled one
 */
input[readonly] {
    cursor: not-allowed;
}

/**
 ** Bulma overrides
 */
.select fieldset[disabled] select,
.select select[disabled],
[disabled].input,
[disabled].textarea,
fieldset[disabled] .input,
fieldset[disabled] .select select,
fieldset[disabled] .textarea {
    background-color: var(--bulma-input-disabled-placeholder-color);
}

